fix: fix background video on small screens

--- a/songbird/src/styles/components/_game.scss
+++ b/songbird/src/styles/components/_game.scss
@@ -34,6 +34,7 @@
   position: absolute;
   top: 0;
   left: 0;
+  height: 100%;
   z-index: -1;
 }
 
